@@ -93,6 +93,12 @@
 			function changeContent(newslist) {
 				var template = $("#contentTemplate").html();
 				$("#newslist").html(_.template(template, {newslist: newslist}));
+				
+				setTimeout(function() {
+					Ti.App.fireEvent("app:hideLoading", {
+						
+					});
+				}, 200);
 			}
 		</script>
 	</body>
