@@ -68,6 +68,12 @@
 				var template = $("#contentTemplate").html();
 				$("#content").append(_.template(template, {content: content}));
 				
+				setTimeout(function() {
+					Ti.App.fireEvent("app:hideLoading", {
+						
+					});
+				}, 200);
+				
 				date = new Date();
 				Ti.App.fireEvent("app:log", {
 					message: date.getTime() + ' $("#content").html() ' + $("#content").html()
