@@ -108,6 +108,12 @@
 			function changeSubmenu(submenus) {
 				var template = $("#submenuTemplate").html();
 				$("#submenu").html(_.template(template, {submenus: submenus}));
+				
+				setTimeout(function() {
+					Ti.App.fireEvent("app:hideLoading", {
+						
+					});
+				}, 200);
 			}
 		</script>
 	</body>
